Base response qaytarib chiqdim